       * Recommended e2fsprogs version: 1.40.11-sun1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).
       * File join has been disabled in this release, refer to Bugzilla 16929.

Severity   : enhancement
Bugzilla   : 15966
Description: Re-disable certain /proc logging
Details    : Enable and disable client's offset_stats, extents_stats and
             extents_stats_per_process stats logging on the fly.

Severity   : major
Frequency  : Only on FC kernels 2.6.22+
Bugzilla   : 16303
Description: oops in statahead
Details    : Do not drop reference count for the dentry from VFS when lookup,
	     VFS will do that by itself.

Severity   : enhancement
Bugzilla   : 16643
Description: Generic /proc file permissions
Details    : Set /Proc file permissions in a more generic way to enable non-
             root users operate on some /proc files.

Severity   : major
Bugzilla   : 16561
Description: Hitting mdc_commit_close() ASSERTION
Details    : Properly handle request reference release in
             ll_release_openhandle().

Severity   : normal
Bugzilla   : 15975
Frequency  : only patchless client
Description: add workaround for race between add/remove dentry from hash

Severity   : enhancement
Bugzilla   : 16845
Description: Allow OST glimpses to return PW locks

Severity   : minor
Bugzilla   : 16717
Description: LBUG when llog conf file is full
Details    : When llog bitmap is full, ENOSPC should be returned for plain
	     log.

Severity   : normal
Bugzilla   : 16907
Description: Prevent import from entering FULL state when server in recovery

Severity   : major
Bugzilla   : 16750
Description: service mount cannot take device name with ":"
Details    : Only when device name contains ":/" will mount treat it as
	     client mount.

Severity   : normal
Bugzilla   : 15927
Frequency  : rare